--- a/excercise/src/main/resources/application.yml
+++ b/excercise/src/main/resources/application.yml
@@ -1,15 +1,17 @@
 
 server:
-  port = 3000
+  port: 3000
 
 spring:
   datasource:
     hikari:
-      driver-class-name: org.mariadb.jdbc.Driver
-      jdbc-url=jdbc:mariadb://localhost:3309/curd_db
-      username=test
-      password=mysql
+      jdbc-url: jdbc:mariadb://localhost:3309/crud_db
+      username: test
+      password: 1234
+      driverClassName: org.mariadb.jdbc.Driver
 
 mybatis:
+  mapper-locations: classpath:xml/**/*.xml
   configuration:
-    map-underscore-to-camel-case=true
+    map-underscore-to-camel-case:
+      true
