--- a/excercise/build.gradle
+++ b/excercise/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 }
 
 tasks.named('test') {
